--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/react": "^11.6.0",
     "@emotion/styled": "^11.6.0",
     "@mui/material": "^5.1.1",
+    "axios": "^0.24.0",
     "next": "latest",
     "react": "17.0.2",
     "react-dom": "17.0.2",
